<resources>
    <string name="app_name">Users</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address:</string>
    <string name="about">About:</string>
    <string name="eye_color">Eye color</string>
    <string name="favorite_fruit">Favorite fruit</string>
    <string name="registered">Registered</string>
    <string name="location">Location</string>
    <string name="friends">Friends:</string>
    <string name="details">Details</string>
    <string name="update">Update</string>
    <string name="active">active</string>
</resources>